--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 * {
     font-family: Helvetica, Arial, sans-serif;
-    background-color: rgb(234, 234, 234);
+    background-color: rgb(63, 191, 191);
   }
   
   body {
@@ -16,6 +16,10 @@
     outline: none;
     padding: 10px 15px;
     width: 100%;
+  }
+
+  h1{
+    text-align: center;
   }
   
   h2 {
